# nix-thunk

./: .hlint.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  boot.nix  cabal.project  default.nix  defaultInputs.nix  lib.nix  meta.nix  nix-thunk.cabal  packaging.nix  populate-cache.sh  private.nix  release.nix  shell.nix  tests-radicle.nix  tests.nix  versions.nix
.github/workflows/: haskell.yml  haskell.yml.disabled  main.yml
dep/ci/: default.nix
dep/ci/master/: github.json
dep/ci/nixos-20.03/: github.json
dep/ci/nixos-20.09/: github.json
dep/ci/nixos-21.05/: github.json
dep/ci/nixos-21.11/: github.json
dep/ci/nixos-22.05/: github.json
dep/ci/nixos-22.11/: github.json
dep/ci/nixos-23.05/: github.json
dep/ci/nixos-24.05/: github.json
dep/ci/nixos-26.05/: github.json
dep/ci/nixpkgs-23.11/: github.json
dep/ci/nixpkgs-unstable/: github.json
dep/cli-extras/: git.json  github.json
dep/cli-git/: git.json  github.json
dep/cli-nix/: git.json  github.json
dep/github/: github.json
dep/gitignore.nix/: github.json
dep/haskell.nix/: github.json
dep/nixpkgs/: github.json
dep/which/: github.json
src-bin/: nix-thunk.hs
src/Nix/: Thunk.hs
src/Nix/Thunk/: Command.hs  Internal.hs
test/: Main.hs
