cabal-version:      >=1.10
name:               nix-thunk
version:            0.7.0.1
license:            BSD3
license-file:       LICENSE
copyright:          Obsidian Systems LLC 2020-2022
maintainer:         maintainer@obsidian.systems
author:             Obsidian Systems LLC
bug-reports:        https://github.com/obsidiansystems/nix-thunk
synopsis:           Lightweight dependency management with Nix
description:
  nix-thunk lets you manage source code dependencies in a lightweight and reproducible way, using Nix.  Each source repository is represented by a stub directory, which refers to the original Git repository.  nix-thunk can easily update these dependencies.
  .
  If you need to make improvements to the original repositories, nix-thunk can unpack them in-place, so that changes can be tested right away, and then pack them back up when you're done.  This makes it easy to send a pull request to the upstream repo while your project continues on a fork, then switch back to upstream once your pull request has been merged.

category:           Nix, Git
build-type:         Simple
extra-source-files:
  CHANGELOG.md
  README.md

tested-with: GHC ==8.6.5 || ==8.8.4

library
  exposed-modules:
    Nix.Thunk
    Nix.Thunk.Internal
    Nix.Thunk.Command

  hs-source-dirs:   src
  default-language: Haskell2010
  ghc-options:      -Wall
  build-depends:
      aeson                 >=1.4.4.0  && <2.3
    , aeson-pretty          >=0.8.7    && <0.9
    , base                  >=4.12.0.0 && <4.19
    , bytestring            >=0.10.8.2 && <0.12
    , cli-extras            >=0.2.1.0  && <0.3
    , cli-git               >=0.2.0.0  && <0.3
    , cli-nix               >=0.2.0.0  && <0.3
    , containers            >=0.6.0.1  && <0.7
    , cryptonite            >=0.25     && <0.31
    , data-default          >=0.7.1.1  && <0.8
    , directory             >=1.3.3.0  && <1.4
    , either                >=5.0.1.1  && <5.1
    , exceptions            >=0.10.3   && <0.11
    , extra                 >=1.6.18   && <1.8
    , filepath              >=1.4.2.1  && <1.5
    , github                >=0.25     && <0.30
    , here                  >=1.2.13   && <1.3
    , lens                  >=4.17.1   && <5.4
    , logging-effect        >=1.3.4    && <1.5
    , megaparsec            >=7.0.5    && <9.7
    , memory                >=0.14     && <0.19
    , modern-uri            >=0.3.1.0  && <0.4
    , monad-logger          >=0.3.30   && <0.4
    , mtl                   >=2.2.2    && <2.4
    , optparse-applicative  >=0.14.3.0 && <0.17
    , temporary             >=1.3      && <1.4
    , text                  >=1.2.3.1  && <1.3
    , time                  >=1.8.0.2  && <1.12
    , unix                  >=2.7.2.2  && <2.8
    , which                 >=0.2      && <0.3
    , yaml                  >=0.11.1.2 && <0.12

executable nix-thunk
  main-is:          src-bin/nix-thunk.hs
  default-language: Haskell2010
  build-depends:
      base                  >=4.12.0.0 && <4.19
    , cli-extras            >=0.2.1.0  && <0.3
    , nix-thunk
    , optparse-applicative  >=0.14.3.0 && <0.17
    , text                  >=1.2.3.1  && <1.3

source-repository head
  type:     git
  location: git://github.com/obsidiansystems/nix-thunk.git
